﻿=========================================================
xx.xx.201x - Version 1.1x
=========================================================
Fixed:
- Link of edit, delete and clone icon not working when not in IPF mode

=========================================================
25.11.2012 - Version 1.13
=========================================================
Added:
- IPF classes
- Option to switch between IPF tables and normal tables
- Option to enable/disable Lytebox library
- Option to enable/disable letters above each page (Index Page)
- Option to enable/disable buttons above each page (Index Page)
- Automatic deleting of obsolete files and folders
- New vCard script

Fixed:
- Google Pagerank, updated to v2.1
- Rating feature not working
- Title of link was stored in lowercase when reported broken
- Fixed typo concerning Scriptaculous
- Screenshot option not working correctly
- Converted CRLF linebreaks of files to LF linebreaks

Updated:
- Prototype to version 1.7.1
- Social Share Privacy icons

Removed:
- support for TinyEditor
- support for XOOPS TAG module
- support for XOOPS News module

=========================================================
07.04.2012 - Version 1.12
=========================================================
Fixed:
- Categories couldn't be saved [#345]
- Screenshot thumbnails were not used
- Mozshot auto screenshot function
- Sql-file
- Uploader class; uploading images was possible regardless errors
- Selected destination folder not visible as selected (Image Upload)
- Links could't be opened in Greybox or LightWindow from Index Page
- MySQL errors when updating

Added:
- Social media buttons with Open Graph support
- Help and warning tips to forms, uses Lytebox
- Extended version of the Recent Links block
- Strip HTML and PHP tags from description in linkload.php
- Screenshots can be enlarged with LightWindow
- Replaced 'Close' tag in LightWindow with close icon
- Lytebox version 5.5
- Prototype version 1.7