@@ -3,6 +3,7 @@ xx.xx.201x - Version 1.1x
 =========================================================
 Fixed:
 - Link of edit, delete and clone icon not working when not in IPF mode
+- Not possible to set link online/offline when not in IPF mode
 
 =========================================================
 25.11.2012 - Version 1.13
